package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "raw_jwt",
    srcs = ["raw_jwt.cc"],
    hdrs = ["raw_jwt.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//tink/jwt/internal:json_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:optional",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "verified_jwt",
    srcs = ["verified_jwt.cc"],
    hdrs = ["verified_jwt.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":raw_jwt",
        "//tink/jwt/internal:json_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "jwt_validator",
    srcs = ["jwt_validator.cc"],
    hdrs = ["jwt_validator.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":raw_jwt",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_mac",
    hdrs = ["jwt_mac.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "jwt_public_key_sign",
    hdrs = ["jwt_public_key_sign.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":raw_jwt",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "jwt_public_key_verify",
    hdrs = ["jwt_public_key_verify.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_validator",
        ":verified_jwt",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "jwt_mac_config",
    srcs = ["jwt_mac_config.cc"],
    hdrs = ["jwt_mac_config.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_hmac_proto_serialization",
        "//proto:config_cc_proto",
        "//tink:registry",
        "//tink/config:config_util",
        "//tink/config:tink_fips",
        "//tink/jwt/internal:jwt_hmac_key_manager",
        "//tink/jwt/internal:jwt_mac_wrapper",
        "//tink/util:status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/memory",
    ],
)

cc_library(
    name = "jwt_key_templates",
    srcs = ["jwt_key_templates.cc"],
    hdrs = ["jwt_key_templates.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_hmac_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//proto:tink_cc_proto",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "@boringssl//:crypto",
    ],
)

cc_library(
    name = "jwk_set_converter",
    srcs = ["jwk_set_converter.cc"],
    hdrs = ["jwk_set_converter.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:binary_keyset_writer",
        "//tink:keyset_handle",
        "//tink/internal:ec_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/jwt/internal:json_util",
        "//tink/jwt/internal:jwt_format",
        "//tink/subtle:common_enums",
        "//tink/util:keyset_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "jwt_signature_config",
    srcs = ["jwt_signature_config.cc"],
    hdrs = ["jwt_signature_config.h"],
    include_prefix = "tink/jwt",
    visibility = ["//visibility:public"],
    deps = [
        ":jwt_ecdsa_proto_serialization",
        ":jwt_rsa_ssa_pkcs1_proto_serialization",
        ":jwt_rsa_ssa_pss_proto_serialization",
        "//proto:config_cc_proto",
        "//tink:registry",
        "//tink/config:config_util",
        "//tink/config:tink_fips",
        "//tink/jwt/internal:jwt_ecdsa_sign_key_manager",
        "//tink/jwt/internal:jwt_ecdsa_verify_key_manager",
        "//tink/jwt/internal:jwt_public_key_sign_wrapper",
        "//tink/jwt/internal:jwt_public_key_verify_wrapper",
        "//tink/jwt/internal:jwt_rsa_ssa_pkcs1_sign_key_manager",
        "//tink/jwt/internal:jwt_rsa_ssa_pkcs1_verify_key_manager",
        "//tink/jwt/internal:jwt_rsa_ssa_pss_sign_key_manager",
        "//tink/jwt/internal:jwt_rsa_ssa_pss_verify_key_manager",
        "//tink/util:status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/memory",
    ],
)

cc_library(
    name = "jwt_mac_parameters",
    hdrs = ["jwt_mac_parameters.h"],
    include_prefix = "tink/jwt",
    deps = ["//tink:parameters"],
)

cc_library(
    name = "jwt_mac_key",
    hdrs = ["jwt_mac_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_mac_parameters",
        "//tink:key",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_hmac_parameters",
    srcs = ["jwt_hmac_parameters.cc"],
    hdrs = ["jwt_hmac_parameters.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_mac_parameters",
        "//tink:parameters",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "jwt_hmac_key",
    srcs = ["jwt_hmac_key.cc"],
    hdrs = ["jwt_hmac_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_hmac_parameters",
        ":jwt_mac_key",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_hmac_proto_serialization",
    srcs = ["jwt_hmac_proto_serialization.cc"],
    hdrs = ["jwt_hmac_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        "//proto:common_cc_proto",
        "//proto:jwt_hmac_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink:secret_key_access_token",
        "//tink/internal:key_parser",
        "//tink/internal:key_serializer",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/util:secret_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_signature_parameters",
    hdrs = ["jwt_signature_parameters.h"],
    include_prefix = "tink/jwt",
    deps = ["//tink:parameters"],
)

cc_library(
    name = "jwt_signature_public_key",
    hdrs = ["jwt_signature_public_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        "//tink:key",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_signature_private_key",
    hdrs = ["jwt_signature_private_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        ":jwt_signature_public_key",
        "//tink:key",
        "//tink:private_key",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_ecdsa_parameters",
    srcs = ["jwt_ecdsa_parameters.cc"],
    hdrs = ["jwt_ecdsa_parameters.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        "//tink:parameters",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
    ],
)

cc_library(
    name = "jwt_ecdsa_public_key",
    srcs = ["jwt_ecdsa_public_key.cc"],
    hdrs = ["jwt_ecdsa_public_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_signature_public_key",
        "//tink:ec_point",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink/internal:ec_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/subtle:common_enums",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_ecdsa_private_key",
    srcs = ["jwt_ecdsa_private_key.cc"],
    hdrs = ["jwt_ecdsa_private_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_public_key",
        ":jwt_signature_private_key",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ec_util",
        "//tink/internal:err_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/subtle:common_enums",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "jwt_ecdsa_proto_serialization",
    srcs = ["jwt_ecdsa_proto_serialization.cc"],
    hdrs = ["jwt_ecdsa_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink:secret_key_access_token",
        "//tink/internal:bn_encoding_util",
        "//tink/internal:key_parser",
        "//tink/internal:key_serializer",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_parameters",
    srcs = ["jwt_rsa_ssa_pkcs1_parameters.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_parameters.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        "//tink:big_integer",
        "//tink:parameters",
        "//tink/internal:bn_util",
        "//tink/internal:rsa_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_public_key",
    srcs = ["jwt_rsa_ssa_pkcs1_public_key.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_public_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_signature_public_key",
        "//tink:big_integer",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_private_key",
    srcs = ["jwt_rsa_ssa_pkcs1_private_key.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_private_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pkcs1_public_key",
        ":jwt_signature_private_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pkcs1_proto_serialization",
    srcs = ["jwt_rsa_ssa_pkcs1_proto_serialization.cc"],
    hdrs = ["jwt_rsa_ssa_pkcs1_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink:secret_key_access_token",
        "//tink/internal:call_with_core_dump_protection",
        "//tink/internal:key_parser",
        "//tink/internal:key_serializer",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/util:secret_data",
        "//tink/util:secret_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_parameters",
    srcs = ["jwt_rsa_ssa_pss_parameters.cc"],
    hdrs = ["jwt_rsa_ssa_pss_parameters.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_signature_parameters",
        "//tink:big_integer",
        "//tink:parameters",
        "//tink/internal:bn_util",
        "//tink/internal:rsa_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_public_key",
    srcs = ["jwt_rsa_ssa_pss_public_key.cc"],
    hdrs = ["jwt_rsa_ssa_pss_public_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_signature_public_key",
        "//tink:big_integer",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/base:endian",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_private_key",
    srcs = ["jwt_rsa_ssa_pss_private_key.cc"],
    hdrs = ["jwt_rsa_ssa_pss_private_key.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pss_public_key",
        ":jwt_signature_private_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:partial_key_access_token",
        "//tink:restricted_big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:status",
        "//tink/util:statusor",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "jwt_rsa_ssa_pss_proto_serialization",
    srcs = ["jwt_rsa_ssa_pss_proto_serialization.cc"],
    hdrs = ["jwt_rsa_ssa_pss_proto_serialization.h"],
    include_prefix = "tink/jwt",
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_public_key",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink:secret_key_access_token",
        "//tink/internal:call_with_core_dump_protection",
        "//tink/internal:key_parser",
        "//tink/internal:key_serializer",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:parameters_parser",
        "//tink/internal:parameters_serializer",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/util:secret_data",
        "//tink/util:secret_proto",
        "//tink/util:status",
        "//tink/util:statusor",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
    ],
)

# tests

cc_test(
    name = "raw_jwt_test",
    size = "small",
    srcs = ["raw_jwt_test.cc"],
    deps = [
        ":raw_jwt",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "verified_jwt_test",
    size = "small",
    srcs = ["verified_jwt_test.cc"],
    deps = [
        ":jwt_mac",
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//proto:common_cc_proto",
        "//tink:mac",
        "//tink/jwt/internal:jwt_mac_impl",
        "//tink/jwt/internal:jwt_mac_internal",
        "//tink/subtle:hmac_boringssl",
        "//tink/util:constants",
        "//tink/util:enums",
        "//tink/util:errors",
        "//tink/util:protobuf_helper",
        "//tink/util:secret_data",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_validator_test",
    size = "small",
    srcs = ["jwt_validator_test.cc"],
    deps = [
        ":jwt_validator",
        ":raw_jwt",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_key_templates_test",
    srcs = ["jwt_key_templates_test.cc"],
    deps = [
        ":jwt_key_templates",
        ":jwt_mac",
        ":jwt_mac_config",
        ":jwt_public_key_sign",
        ":jwt_public_key_verify",
        ":jwt_signature_config",
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//proto:tink_cc_proto",
        "//tink:keyset_handle",
        "//tink/config:global_registry",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "//tink/util:test_util",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwk_set_converter_test",
    srcs = ["jwk_set_converter_test.cc"],
    deps = [
        ":jwk_set_converter",
        ":jwt_public_key_sign",
        ":jwt_public_key_verify",
        ":jwt_signature_config",
        ":jwt_validator",
        ":raw_jwt",
        ":verified_jwt",
        "//proto:ecdsa_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:cleartext_keyset_handle",
        "//tink:keyset_handle",
        "//tink:keyset_reader",
        "//tink/config:global_registry",
        "//tink/json:json_keyset_reader",
        "//tink/jwt/internal:json_util",
        "//tink/util:status",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "jwt_mac_config_test",
    srcs = ["jwt_mac_config_test.cc"],
    tags = ["fips"],
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        ":jwt_key_templates",
        ":jwt_mac_config",
        "//proto:jwt_hmac_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:keyset_handle",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:registry",
        "//tink:restricted_data",
        "//tink/config:global_registry",
        "//tink/internal:fips_utils",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/subtle:random",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_signature_config_test",
    srcs = ["jwt_signature_config_test.cc"],
    tags = ["fips"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_public_key",
        ":jwt_key_templates",
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_public_key",
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_public_key",
        ":jwt_signature_config",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:keyset_handle",
        "//tink:partial_key_access",
        "//tink:registry",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/config:global_registry",
        "//tink/internal:ec_util",
        "//tink/internal:fips_utils",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_hmac_parameters_test",
    srcs = ["jwt_hmac_parameters_test.cc"],
    deps = [
        ":jwt_hmac_parameters",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_hmac_key_test",
    srcs = ["jwt_hmac_key_test.cc"],
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_hmac_proto_serialization_test",
    srcs = ["jwt_hmac_proto_serialization_test.cc"],
    deps = [
        ":jwt_hmac_key",
        ":jwt_hmac_parameters",
        ":jwt_hmac_proto_serialization",
        "//proto:common_cc_proto",
        "//proto:jwt_hmac_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_data",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/subtle:random",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_parameters_test",
    srcs = ["jwt_ecdsa_parameters_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_public_key_test",
    srcs = ["jwt_ecdsa_public_key_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_public_key",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:partial_key_access",
        "//tink/internal:ec_util",
        "//tink/subtle:common_enums",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_private_key_test",
    srcs = ["jwt_ecdsa_private_key_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_public_key",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink/internal:ec_util",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_ecdsa_proto_serialization_test",
    srcs = ["jwt_ecdsa_proto_serialization_test.cc"],
    deps = [
        ":jwt_ecdsa_parameters",
        ":jwt_ecdsa_private_key",
        ":jwt_ecdsa_proto_serialization",
        ":jwt_ecdsa_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_ecdsa_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:ec_point",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:ec_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/subtle:common_enums",
        "//tink/util:secret_data",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_parameters_test",
    srcs = ["jwt_rsa_ssa_pkcs1_parameters_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        "//tink:big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_public_key_test",
    srcs = ["jwt_rsa_ssa_pkcs1_public_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//tink:big_integer",
        "//tink:partial_key_access",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_private_key_test",
    srcs = ["jwt_rsa_ssa_pkcs1_private_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pkcs1_proto_serialization_test",
    srcs = ["jwt_rsa_ssa_pkcs1_proto_serialization_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pkcs1_parameters",
        ":jwt_rsa_ssa_pkcs1_private_key",
        ":jwt_rsa_ssa_pkcs1_proto_serialization",
        ":jwt_rsa_ssa_pkcs1_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_rsa_ssa_pkcs1_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:bn_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_parameters_test",
    srcs = ["jwt_rsa_ssa_pss_parameters_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        "//tink:big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_public_key_test",
    srcs = ["jwt_rsa_ssa_pss_public_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_public_key",
        "//tink:big_integer",
        "//tink:partial_key_access",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_private_key_test",
    srcs = ["jwt_rsa_ssa_pss_private_key_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_public_key",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink/internal:bn_util",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "jwt_rsa_ssa_pss_proto_serialization_test",
    srcs = ["jwt_rsa_ssa_pss_proto_serialization_test.cc"],
    deps = [
        ":jwt_rsa_ssa_pss_parameters",
        ":jwt_rsa_ssa_pss_private_key",
        ":jwt_rsa_ssa_pss_proto_serialization",
        ":jwt_rsa_ssa_pss_public_key",
        "//proto:common_cc_proto",
        "//proto:jwt_rsa_ssa_pss_cc_proto",
        "//proto:tink_cc_proto",
        "//tink:big_integer",
        "//tink:insecure_secret_key_access",
        "//tink:key",
        "//tink:parameters",
        "//tink:partial_key_access",
        "//tink:restricted_big_integer",
        "//tink:restricted_data",
        "//tink/internal:bn_util",
        "//tink/internal:mutable_serialization_registry",
        "//tink/internal:proto_key_serialization",
        "//tink/internal:proto_parameters_serialization",
        "//tink/internal:serialization",
        "//tink/internal:ssl_unique_ptr",
        "//tink/util:statusor",
        "//tink/util:test_matchers",
        "@boringssl//:crypto",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:string_view",
        "@com_google_absl//absl/types:optional",
        "@com_google_googletest//:gtest_main",
    ],
)
